# aniparser

./: .gitignore  setup.cfg
aniparser/: __init__.py
