[metadata]
name = aniparser
version = 0.0.1
author = Dan Hess
author_email = phxntxm1@gmail.com
description = Provides a parser to parse file names and return data based on the names
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Phxntxm/aniparser
project_urls =
    Bug Tracker = https://github.com/Phxntxm/aniparser/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = aniparser
packages = find:
python_requires = >=3.4

[options.packages.find]
where = aniparser